# zukelang

./: .gitignore  README.md  abc.ml  abc.mli  circuit.ml  circuit.mli  dune  dune-project  ecp.ml  expr.ml  expr.mli  field.ml  gate.ml  gate.mli  lang.ml  lang.mli  main.ml  pairing.ml  pinocchio.ml  pinocchio.mli  polynomial.ml  polynomial.mli  qAP.ml  qAP.mli  r1CS.ml  r1CS.mli  utils.ml  var.ml  var.mli  zk.ml  zukelang.opam
.github/workflows/: actions.yml
_attic/: r1CS.mli
groth16/: dune  main.ml
groth16/lib/: dune  groth16.ml  groth16.mli
groth16/test/: dune  main.ml
lib/: FFT.ml  FFT.mli  c.ml  c.mli  circuit.ml  circuit.mli  comp.ml  comp.mli  dft.ml  dune  ecp.ml  exn.ml  field.ml  lang.ml  lang.mli  misc.ml  polynomial.ml  polynomial.mli  protocol.ml  qAP.ml  qAP.mli  stateM.ml  utils.ml  var.ml  var.mli
lib/test/: dune  main.ml
pinocchio/: abc.mli  circuit.ml  circuit.mli  dune  ecp.ml  main.ml  pairing.ml  pinocchio.ml  polynomial.ml  qAP.ml  r1CS.ml  var.ml  var.mli
pinocchio/lib/: circuit.ml  dune  pinocchio.ml  pinocchio.mli  qAP.mli  zk.ml  zk.mli
pinocchio/test/: dune  main.ml
src/groth16/: dune  groth16.ml  groth16.mli
src/lib/: dune  zukelang.ml
src/math/: FFT.ml  c.ml  circuit.ml  circuit.mli  comp.ml  comp.mli  dune  ecp.ml  field.ml  lang.ml  lang.mli  polynomial.ml  protocol.ml  var.ml  var.mli
src/misclib/: JSON.ml  dune  error.ml  error.mli  format.ml  gen.ml  list.ml  misc.ml  misclib.ml  monad.ml  monad.mli  option.ml  ptree.ml  result.ml  seq.ml  stateM.ml  stateM.mli
src/pinocchio/: dune  pinocchio.ml  pinocchio.mli
(+78 files in other folders)
